logos-codegen/tests/snapshots/codegen__skip_callback-tailcall.snap
---
source: logos-codegen/tests/codegen.rs
expression: formatted
---
#[automatically_derived]
impl<'s> ::logos::Logos<'s> for Token {
    type Error = &'static str;
    type Extras = Vec<&'static str>;
    type Source = ::core::primitive::str;
    fn lex(
        lex: &mut ::logos::Lexer<'s, Self>,
    ) -> ::core::option::Option<
        ::core::result::Result<Self, <Self as ::logos::Logos<'s>>::Error>,
    > {
        use ::logos::internal::{
            LexerInternal, CallbackRetVal, CallbackResult, SkipRetVal, SkipResult,
        };
        use ::core::result::Result as _Result;
        use ::core::option::Option as _Option;
        use ::logos::Lexer as _Lexer;
        use ::logos::Logos;
        macro_rules! _fast_loop {
            ($lex:ident, $test:ident, $offset:ident) => {
                'fast_loop : { while let _Option::Some(arr) = $lex .read:: < &
                [::core::primitive::u8; 8usize] > ($offset) { if $test (arr[0usize]) {
                $offset += 0usize; break 'fast_loop; } if $test (arr[1usize]) { $offset
                += 1usize; break 'fast_loop; } if $test (arr[2usize]) { $offset +=
                2usize; break 'fast_loop; } if $test (arr[3usize]) { $offset += 3usize;
                break 'fast_loop; } if $test (arr[4usize]) { $offset += 4usize; break
                'fast_loop; } if $test (arr[5usize]) { $offset += 5usize; break
                'fast_loop; } if $test (arr[6usize]) { $offset += 6usize; break
                'fast_loop; } if $test (arr[7usize]) { $offset += 7usize; break
                'fast_loop; } $offset += 8usize; } while let _Option::Some(byte) = $lex
                .read:: < ::core::primitive::u8 > ($offset) { if $test (byte) { break
                'fast_loop; } $offset += 1; } }
            };
        }
        macro_rules! _take_action {
            ($lex:ident, $offset:ident, $context:ident, $state:ident) => {
                { let action = _get_action($lex, $offset, $context); match action {
                CallbackResult::Emit(tok) => { return _Option::Some(_Result::Ok(tok)); },
                CallbackResult::Skip => { $lex .trivia(); $offset = $lex .offset();
                $context = _Option::None; return state0($lex, $offset, $context); },
                CallbackResult::Error(err) => { return _Option::Some(_Result::Err(err));
                }, CallbackResult::DefaultError => { return
                _Option::Some(_Result::Err(_make_error($lex))); }, } }
            };
        }
        #[inline]
        fn _make_error<'s>(lex: &mut _Lexer<'s, Token>) -> <Token as Logos<'s>>::Error {
            <<Token as Logos<'s>>::Error as ::core::default::Default>::default()
        }
        #[inline]
        fn _get_action<'s>(
            lex: &mut _Lexer<'s, Token>,
            offset: ::core::primitive::usize,
            context: _Option<LogosLeaf>,
        ) -> CallbackResult<'s, Token> {
            match context {
                _Option::None => {
                    lex.end_to_boundary(offset.max(lex.offset() + 1));
                    CallbackResult::Error(_make_error(lex))
                }
                _Option::Some(LogosLeaf::Leaf0) => CallbackResult::Skip,
                _Option::Some(LogosLeaf::Leaf1) => {
                    let cb_result = {
                        let lex = lex;
                        lex.extras.push("inline_callback")
                    };
                    let srv = SkipRetVal::<'s, Token>::construct(cb_result);
                    CallbackResult::from(srv)
                }
                _Option::Some(LogosLeaf::Leaf2) => {
                    let cb_result = labelled_callback(lex);
                    let srv = SkipRetVal::<'s, Token>::construct(cb_result);
                    CallbackResult::from(srv)
                }
                _Option::Some(LogosLeaf::Leaf3) => {
                    let cb_result = labelled_skip_callback(lex);
                    let srv = SkipRetVal::<'s, Token>::construct(cb_result);
                    CallbackResult::from(srv)
                }
                _Option::Some(LogosLeaf::Leaf4) => {
                    let cb_result = labelled_result_callback(lex);
                    let srv = SkipRetVal::<'s, Token>::construct(cb_result);
                    CallbackResult::from(srv)
                }
                _Option::Some(LogosLeaf::Leaf5) => {
                    let cb_result = labelled_skip_result_callback(lex);
                    let srv = SkipRetVal::<'s, Token>::construct(cb_result);
                    CallbackResult::from(srv)
                }
            }
        }
        #[derive(::core::clone::Clone, ::core::marker::Copy)]
        enum LogosLeaf {
            Leaf0 = 0isize,
            Leaf1 = 1isize,
            Leaf2 = 2isize,
            Leaf3 = 3isize,
            Leaf4 = 4isize,
            Leaf5 = 5isize,
        }
        fn state0<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {
                #[derive(::core::marker::Copy, ::core::clone::Clone)]
                enum LogosNextState {
                    ___,
                    State1,
                    State2,
                    State3,
                    State4,
                    State5,
                    State6,
                }
                const TABLE: [LogosNextState; 256] = {
                    use LogosNextState::*;
                    [
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        State2,
                        State3,
                        State4,
                        State5,
                        State6,
                        State6,
                        State1,
                        State1,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                    ]
                };
                offset += 1;
                match TABLE[byte as ::core::primitive::usize] {
                    LogosNextState::State1 => {
                        return state1(lex, offset, context);
                    }
                    LogosNextState::State2 => {
                        return state2(lex, offset, context);
                    }
                    LogosNextState::State3 => {
                        return state3(lex, offset, context);
                    }
                    LogosNextState::State4 => {
                        return state4(lex, offset, context);
                    }
                    LogosNextState::State5 => {
                        return state5(lex, offset, context);
                    }
                    LogosNextState::State6 => {
                        return state6(lex, offset, context);
                    }
                    LogosNextState::___ => {}
                }
                offset -= 1;
            } else {
                if lex.is_prefix() {
                    lex.end(lex.offset());
                    return _Option::None;
                }
                if lex.offset() == offset {
                    return _Option::None;
                }
            }
            _take_action!(lex, offset, context, state)
        }
        fn state1<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf5);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state2<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf0);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state3<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf1);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state4<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf2);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state5<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf3);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state6<'s>(
            lex: &mut _Lexer<'s, Token>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<_Result<Token, <Token as Logos<'s>>::Error>> {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf4);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        state0(lex, lex.offset(), _Option::None)
    }
}
